# makeitcompliantpython

./: .gitignore  FileComparison.py  LICENSE  README.md  main.py  makeitcompliant.spec  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  (+1 more)
docs/: ARCHITECTURE.md  BUILDING_WINDOWS_EXE.md  COMPLIANCE_ENGINE.md  COMPLIANCE_REPORTS.md  GITHUB_PAGES.md  ML_LICENSE_DETECTION.md  PROLOG_RULES.md  UPGRADE_PLAN.md
makeitcompliant/: __init__.py
scripts/: build_windows.ps1  lint.ps1  test.ps1
tests/: conftest.py  test_analysis_api.py  test_analysis_api_full.py  test_classifier_extended.py  test_compliance_engine_mock.py  test_compliance_models.py  test_coverage_gaps.py  test_features_extended.py  test_file_comparison_integration.py  test_gui_util.py  test_imports.py  test_license_analysis_integration.py  test_license_analysis_mock.py  test_license_detector.py  test_license_detector_extended.py  test_license_models.py  test_license_registry.py  test_ml.py  test_parsers.py  test_paths.py  test_paths_extended.py  test_project_compliance.py  test_project_compliance_legacy.py  test_project_scanner.py  test_project_scanner_extended.py  test_prolog_engine_mock.py  test_reasoning_engine_extended.py  test_reasoning_engine_mock.py  test_report_builder_extended.py  test_report_builder_full.py  test_report_export.py  test_risk_scoring.py  test_runtime.py  test_scanner_full_project.py  test_session.py  test_session_facts.py  test_similarity_module.py  test_spdx_and_normalizer.py  test_validation.py
web/: demo.js  index.html  site.css
(+55 files in other folders)
